prevent SiteSidebar flickering when switching between sites

--- a/frontend/src/Components/SiteSidebar.module.scss
+++ b/frontend/src/Components/SiteSidebar.module.scss
@@ -42,6 +42,11 @@
                     color: var(--onAccent);
                     border: none;
                 }
+
+                &:disabled {
+                  background: var(--dim1);
+                  color: var(--fgSofter);
+                }
             }
         }
 
